cartopy/docs/v0.22/_sources/gallery/index.rst.txt
:orphan:

Gallery
-------

The following examples show off the functionality of Cartopy. They
illustrate the kinds of things you can do with this library. For
more examples, tutorials, and guides on how to use Cartopy, see
the :doc:`getting started <../getting_started/index>` section.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Lines and polygons
==================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how a custom shape geometry may be used instead of the projection&#x27;s d...">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_always_circular_stereo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_always_circular_stereo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom Boundary Shape</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example manually instantiates a cartopy.feature.NaturalEarthFeature to access administrati...">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_feature_creation_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_feature_creation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Feature Creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of some of the built-in Natural Earth features found in cartopy.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_features_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_features.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Features</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of a simple map that compares Geodetic and Plate Carree lines between two locations.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_global_map_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_global_map.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Global Map</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the power of Shapely to illustrate states that are likely to have been signif...">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_hurricane_katrina_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_hurricane_katrina.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hurricane Katrina</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draws a polygon where there is no sunlight for the given datetime.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_nightshade_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_nightshade.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Nightshade feature</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Produces a map of ocean seafloor depth, demonstrating the cartopy.io.shapereader.Reader interfa...">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_ocean_bathymetry_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_ocean_bathymetry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ocean bathymetry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of the way a box is warped when it is defined in a rotated pole coordinate syst...">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_rotated_pole_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_rotated_pole.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Rotated pole boxes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the effect of referencing your data to an incorrect ellipse.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_effects_of_the_ellipse_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_effects_of_the_ellipse.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The effect of badly referencing an ellipse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize Tissot&#x27;s indicatrix on a map.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_tissot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_tissot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tissot's Indicatrix</div>
    </div>


.. raw:: html

    </div>


Scalar data
===========



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cartopy represents data in Cartesian projected coordinates, meaning that 350 degrees longitude,...">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_wrapping_global_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_wrapping_global.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Adding a cyclic point to help with wrapping of global data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of adding contour labels to matplotlib contours.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_contour_labels_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_contour_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contour labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the difference between transforming the points before/after generatin...">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_contour_transforms_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_contour_transforms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contour transform options</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of contourf on manufactured data.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_waves_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_waves.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Filled contours</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrates cartopy&#x27;s ability to draw map tiles which are downloaded on demand from the Stamen...">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_eyja_volcano_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_eyja_volcano.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Map tile acquisition</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The National Oceanic and Atmospheric Administration (NOAA) monitors the solar wind conditions u...">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_aurora_forecast_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_aurora_forecast.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting the Aurora Forecast from NOAA on Orthographic Polar Projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates Cartopy&#x27;s ability to project images into the desired projection on-th...">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_geostationary_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_geostationary.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reprojecting images from a Geostationary projection</div>
    </div>


.. raw:: html

    </div>


Vector data
===========



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting arrows.">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_arrows_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_arrows.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Arrows</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting barbs.">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_barbs_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_barbs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Barbs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the regridding functionality in quiver (there exists equivalent funct...">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_regridding_arrows_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_regridding_arrows.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regridding vectors with quiver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generating a vector-based streamplot.">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_streamplot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_streamplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Streamplot</div>
    </div>


.. raw:: html

    </div>


Web services
============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example displays imagery from a web map tile service on two different projections, one of ...">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_reprojected_wmts_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_reprojected_wmts.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Displaying WMTS tiled map data on an arbitrary projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the interactive pan and zoom capability supported by an OGC web servi...">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_wms_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_wms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Interactive WMS (Web Map Service)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the interactive pan and zoom capability supported by an OGC web servi...">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_wmts_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_wmts.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Interactive WMTS (Web Map Tile Service)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example further demonstrates WMTS support within cartopy. Optional keyword arguments can b...">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_wmts_time_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_wmts_time.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Web Map Tile Service time dimension demonstration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how imagery from a tile providing web service can be accessed.">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_image_tiles_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_image_tiles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Web tile imagery</div>
    </div>


.. raw:: html

    </div>


Gridlines and labels
====================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="These examples demonstrate how to quickly add longitude and latitude gridlines and tick labels ...">

.. only:: html

  .. image:: /gallery/gridlines_and_labels/images/thumb/sphx_glr_gridliner_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_gridlines_and_labels_gridliner.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gridlines and tick labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates adding tick labels to maps on rectangular projections using special t...">

.. only:: html

  .. image:: /gallery/gridlines_and_labels/images/thumb/sphx_glr_tick_labels_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_gridlines_and_labels_tick_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tick Labels</div>
    </div>


.. raw:: html

    </div>


Miscellanea
===========



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to animate gridded data using ~cartopy.mpl.geoaxes.GeoAxes.pcolor...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_animate_surface_thumb.gif
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_animate_surface.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animating a gridded surface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The actual code to generate cartopy&#x27;s favicon.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_favicon_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_favicon.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cartopy Favicon</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The actual code to produce cartopy&#x27;s logo.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_logo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_logo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cartopy Logo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example displays all 60 zones of the Universal Transverse Mercator projection next to each...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_utm_all_zones_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_utm_all_zones.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Displaying all 60 zones of the UTM projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates plotting data on an eccentric ellipse. The data plotted is a topograp...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_eccentric_ellipse_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_eccentric_ellipse.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Displaying data on an eccentric ellipse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to modify the boundary/neatline of an axes. We construct a star w...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_star_shaped_boundary_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_star_shaped_boundary.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modifying the boundary/neatline of a map in cartopy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Produces a map showing London Underground station locations with high resolution background ima...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_tube_stations_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_tube_stations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tube Stations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of the power of Matplotlib combined with cartopy&#x27;s Azimuthal Equidistant projec...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_un_flag_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_un_flag.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">UN Flag</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use cartopy ~cartopy.mpl.geoaxes.GeoAxes with ~mpl_toolkits.ax...">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_axes_grid_basic_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_axes_grid_basic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using Cartopy and AxesGrid toolkit</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gallery/lines_and_polygons/index.rst
   /gallery/scalar_data/index.rst
   /gallery/vector_data/index.rst
   /gallery/web_services/index.rst
   /gallery/gridlines_and_labels/index.rst
   /gallery/miscellanea/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: gallery_python.zip </gallery/gallery_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: gallery_jupyter.zip </gallery/gallery_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
