cartopy/docs/v0.24/_sources/gallery/index.rst.txt
:orphan:

Gallery
-------

The following examples show off the functionality of Cartopy. They
illustrate the kinds of things you can do with this library. For
more examples, tutorials, and guides on how to use Cartopy, see
the :doc:`getting started <../getting_started/index>` section.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Lines and polygons
==================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how a custom shape geometry may be used instead of the projection&#x27;s default boundary.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_always_circular_stereo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_always_circular_stereo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Custom Boundary Shape</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example manually instantiates a cartopy.feature.NaturalEarthFeature to access administrative boundaries (states and provinces).">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_feature_creation_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_feature_creation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Feature Creation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of some of the built-in Natural Earth features found in cartopy.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_features_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_features.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Features</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of a simple map that compares Geodetic and Plate Carree lines between two locations.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_global_map_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_global_map.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Global Map</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the power of Shapely to illustrate states that are likely to have been significantly impacted by Hurricane Katrina.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_hurricane_katrina_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_hurricane_katrina.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Hurricane Katrina</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draws a polygon where there is no sunlight for the given datetime.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_nightshade_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_nightshade.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Nightshade feature</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Produces a map of ocean seafloor depth, demonstrating the cartopy.io.shapereader.Reader interface. The data is a series of 10m resolution nested polygons obtained from Natural Earth, derived from the NASA SRTM Plus product. Since the dataset contains a zipfile with multiple shapefiles representing different depths, the example demonstrates manually downloading and reading them with the general shapereader interface, instead of the specialized cartopy.feature.NaturalEarthFeature interface.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_ocean_bathymetry_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_ocean_bathymetry.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ocean bathymetry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of the way a box is warped when it is defined in a rotated pole coordinate system.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_rotated_pole_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_rotated_pole.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Rotated pole boxes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the effect of referencing your data to an incorrect ellipse.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_effects_of_the_ellipse_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_effects_of_the_ellipse.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The effect of badly referencing an ellipse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize Tissot&#x27;s indicatrix on a map.">

.. only:: html

  .. image:: /gallery/lines_and_polygons/images/thumb/sphx_glr_tissot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_lines_and_polygons_tissot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tissot's Indicatrix</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Scalar data
===========



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cartopy represents data in Cartesian projected coordinates, meaning that 350 degrees longitude, is not just 10 degrees away from 0 degrees as it is when represented in spherical coordinates. This means that the plotting methods will not plot data between the last and the first longitude.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_wrapping_global_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_wrapping_global.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Adding a cyclic point to help with wrapping of global data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to colour geometries based on a data array.  This functionality is available since Cartopy 0.23.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_geometry_data_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_geometry_data.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Choropleth map: associating data with geometries</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of adding contour labels to matplotlib contours.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_contour_labels_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_contour_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contour labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the difference between transforming the points before/after generating the contours. It uses the transform_first keyword argument to indicate that Cartopy should transform the points before calling the contouring algorithm, which can have a significant impact on speed (it is much faster to transform points than it is to transform patches). This does have a negative impact on the wrapped coordinates as one can see in the second axes that the data does not extend to the full global extent.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_contour_transforms_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_contour_transforms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Contour transform options</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An example of contourf on manufactured data.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_waves_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_waves.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Filled contours</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrates cartopy&#x27;s ability to draw map tiles which are downloaded on demand from the Google tile server. Internally these tiles are then combined into a single image and displayed in the cartopy GeoAxes.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_eyja_volcano_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_eyja_volcano.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Map tile acquisition</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The National Oceanic and Atmospheric Administration (NOAA) monitors the solar wind conditions using the ACE spacecraft orbiting close to the L1 Lagrangian point of the Sun-Earth system. This data is fed into the OVATION-Prime model to forecast the probability of visible aurora at various locations on Earth. Every five minutes a new forecast is published for the coming 30 minutes. The data is provided as a 360 by 181 grid of probabilities in percent of visible aurora. The data spaced equally in degrees from 0 to 359 and -90 to 90.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_aurora_forecast_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_aurora_forecast.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plotting the Aurora Forecast from NOAA on Orthographic Polar Projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates Cartopy&#x27;s ability to project images into the desired projection on-the-fly. The image itself is retrieved from a URL and is loaded directly into memory without storing it intermediately into a file. It represents pre-processed data from the Spinning Enhanced Visible and Infrared Imager onboard Meteosat Second Generation, which has been put into an image in the data&#x27;s native Geostationary coordinate system - it is then projected by cartopy into a global Miller map.">

.. only:: html

  .. image:: /gallery/scalar_data/images/thumb/sphx_glr_geostationary_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_scalar_data_geostationary.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reprojecting images from a Geostationary projection</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Vector data
===========



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting arrows.">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_arrows_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_arrows.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Arrows</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting barbs.">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_barbs_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_barbs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Barbs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the regridding functionality in quiver (there exists equivalent functionality in cartopy.mpl.geoaxes.GeoAxes.barbs).">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_regridding_arrows_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_regridding_arrows.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regridding vectors with quiver</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generating a vector-based streamplot.">

.. only:: html

  .. image:: /gallery/vector_data/images/thumb/sphx_glr_streamplot_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_vector_data_streamplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Streamplot</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Web services
============



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example displays imagery from a web map tile service on two different projections, one of which is not provided by the service.">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_reprojected_wmts_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_reprojected_wmts.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Displaying WMTS tiled map data on an arbitrary projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the interactive pan and zoom capability supported by an OGC web services Web Map Service (WMS) aware axes.">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_wms_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_wms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Interactive WMS (Web Map Service)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the interactive pan and zoom capability supported by an OGC web services Web Map Tile Service (WMTS) aware axes.">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_wmts_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_wmts.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Interactive WMTS (Web Map Tile Service)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example further demonstrates WMTS support within cartopy. Optional keyword arguments can be supplied to the OGC WMTS &#x27;gettile&#x27; method. This allows for the specification of the &#x27;time&#x27; dimension for a WMTS layer which supports it.">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_wmts_time_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_wmts_time.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Web Map Tile Service time dimension demonstration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how imagery from a tile providing web service can be accessed.">

.. only:: html

  .. image:: /gallery/web_services/images/thumb/sphx_glr_image_tiles_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_web_services_image_tiles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Web tile imagery</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Gridlines and labels
====================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="These examples demonstrate how to quickly add longitude and latitude gridlines and tick labels on a non-rectangular projection.">

.. only:: html

  .. image:: /gallery/gridlines_and_labels/images/thumb/sphx_glr_gridliner_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_gridlines_and_labels_gridliner.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gridlines and tick labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates adding tick labels to maps on rectangular projections using special tick formatters.">

.. only:: html

  .. image:: /gallery/gridlines_and_labels/images/thumb/sphx_glr_tick_labels_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_gridlines_and_labels_tick_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tick Labels</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Miscellanea
===========



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to animate gridded data using pcolormesh().">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_animate_surface_thumb.gif
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_animate_surface.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animating a gridded surface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The actual code to generate cartopy&#x27;s favicon.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_favicon_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_favicon.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cartopy Favicon</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The actual code to produce cartopy&#x27;s logo.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_logo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_logo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cartopy Logo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example displays all 60 zones of the Universal Transverse Mercator projection next to each other in a figure.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_utm_all_zones_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_utm_all_zones.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Displaying all 60 zones of the UTM projection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates plotting data on an eccentric ellipse. The data plotted is a topography map of the asteroid Vesta. The map is actually an image, which is defined on an equirectangluar projection relative to an ellipse with a semi-major axis of 285 km and a semi-minor axis of 229 km. The image is reprojected on-the-fly onto a geostationary projection with matching eccentricity.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_eccentric_ellipse_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_eccentric_ellipse.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Displaying data on an eccentric ellipse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to modify the boundary/neatline of an axes. We construct a star with coordinates in a Plate Carree coordinate system, and use the star as the outline of the map.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_star_shaped_boundary_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_star_shaped_boundary.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modifying the boundary/neatline of a map in cartopy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Produces a map showing London Underground station locations with high resolution background imagery provided by OpenStreetMap.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_tube_stations_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_tube_stations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tube Stations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of the power of Matplotlib combined with cartopy&#x27;s Azimuthal Equidistant projection to reproduce the UN flag.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_un_flag_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_un_flag.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">UN Flag</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use cartopy GeoAxes with AxesGrid from the mpl_toolkits.axes_grid1. The script constructs an axes_class kwarg with Plate Carree projection and passes it to the AxesGrid instance. The AxesGrid built-in tick labelling is not used, and instead a standard procedure of creating grid lines is used. Then some fake data is plotted.">

.. only:: html

  .. image:: /gallery/miscellanea/images/thumb/sphx_glr_axes_grid_basic_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_miscellanea_axes_grid_basic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using Cartopy and AxesGrid toolkit</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gallery/lines_and_polygons/index.rst
   /gallery/scalar_data/index.rst
   /gallery/vector_data/index.rst
   /gallery/web_services/index.rst
   /gallery/gridlines_and_labels/index.rst
   /gallery/miscellanea/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: gallery_python.zip </gallery/gallery_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: gallery_jupyter.zip </gallery/gallery_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
